--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     network_mode: "service:provider"
     depends_on:
       - provider
+    volumes:
+      - ./app/storage:/code/storage
 
   provider:
     build:
